[FIX] color + header + collapse text and count carousel

--- a/frontEnd/src/styles/components/_collapse.scss
+++ b/frontEnd/src/styles/components/_collapse.scss
@@ -53,8 +53,8 @@
         p {
             color: $red;
             font-size: 0.75rem;
-            text-align: center;
             font-style: italic;
+            text-align: initial;
         }
 
         ul {
